Deploy module, ensure gap between module reference and copy button

--- a/packages/browser-wallet/src/popup/shared/TransactionReceipt/TransactionReceipt.scss
+++ b/packages/browser-wallet/src/popup/shared/TransactionReceipt/TransactionReceipt.scss
@@ -59,6 +59,11 @@ $transaction-receipt-horizontal-padding: rem(20px);
         overflow-wrap: break-word;
     }
 
+    &__with-copy {
+        gap: rem(5px);
+        margin-left: rem(18px);
+    }
+
     &__copy-button {
         min-width: rem(18px);
     }
